<resources>
    <string name="app_name">OhRats</string>

    <!-- User and Login Strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_cancel_sign_in">Cancel</string>
    <string name="error_invalid_login">Invalid Credentials</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome to OhRats!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Logout</string>
    <string name="historical_charts_button">Historical Charts</string>
    <string name="view_rat_reports_button">View Rat Reports</string>
    <string name="add_rat_sighting_button">Add Rat Sighting</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string-array name="level_array">
        <item>User</item>
        <item>Admin</item>
    </string-array>

    <!-- Rat Sighting Strings -->
    <string name="sighting_city">City</string>
    <string name="sighting_zipCode">ZIP code</string>
    <string name="sighting_latitude">Latitude</string>
    <string name="sighting_longitude">Longitude</string>
    <string name="sighting_address">Address</string>
    <string name="sighting_submit">Submit</string>
    <string-array name="boroughs_array">
        <item>Bronx</item>
        <item>Brooklyn</item>
        <item>Queens</item>
        <item>StatenIsland</item>
        <item>Manhattan</item>
    </string-array>

    <!-- Chart Strings -->
    <string name="chart_hub_message">Please configure a chart</string>
    <string name="launch_chart_button">Show Chart</string>
    <string name="chart_range_message">Chose a time period</string>
    <string name="chart_type_message">Chose a chart type</string>
    <string name="date_start_hint">Start Date</string>
    <string name="date_end_hint">End Date</string>
    <string name="EST"> EST</string>
    <string name="Error_Parsing">Error Parsing: </string>
    <string-array name="chart_type_array">
        <item>Pie Chart</item>
        <item>Bar Chart</item>
    </string-array>
    <string-array name="chart_time_array">
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>


</resources>
