<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/IncidentLocationType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/IncidentAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sighting_address"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/IncidentZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/sighting_zipCode" />

    <EditText
        android:id="@+id/IncidentCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/sighting_city" />

    <Spinner
        android:id="@+id/boroughSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/rcurrentlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingLeft="5dp"
        android:text="Use Current Location"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/IncidentLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sighting_latitude"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/IncidentLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sighting_longitude"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/submitSightingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sighting_submit" />

</LinearLayout>